<!--
  ~ Copyright (c) 2018. Kristoffer Schneider Licensed under the Apache-2.0 License.
  -->

<resources>
    <string name="app_name">Tension Log</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="tension">Tension</string>
    <string name="location">Location</string>
    <string name="situation">Situation</string>
    <string name="skill_used">Skill used</string>
    <string name="skill_duration">Duration of the skill</string>
    <string name="tension_after_label">Tension after doing the skill</string>
    <string name="title_activity_main">Tension Log</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_overview">Calendar Overview</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_export">Export</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate" translatable="false">Communicate</string>
    <string name="menu_today">Today</string>
    <string name="date">Date</string>
    <string name="title_settings">Settings</string>
    <string name="title_share">Share</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_calendar_overview">Calendar</string>
    <string name="new_entry">New Entry</string>
</resources>
