<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. Kristoffer Schneider Licensed under the Apache-2.0 License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_nav"
            android:title="@string/new_entry"/>
        <item
            android:id="@+id/nav_today_overview"
            android:icon="@drawable/ic_today"
            android:title="@string/menu_today"/>
        <item
            android:id="@+id/nav_cal_overview"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_overview"/>
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_graphic_eq_black"
            android:title="@string/menu_statistics"/>
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_import_export"
            android:title="@string/menu_export"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send"/>
        </menu>
    </item>

</menu>
