<!--
  ~ Copyright (c) 2018. Kristoffer Schneider Licensed under the Apache-2.0 License.
  -->
<layout>

    <data class="tech.falx.tensionlog.ui.binding.ItemDetailBinding">

        <variable
            name="vm"
            type="tech.falx.tensionlog.ui.viewmodel.TensionEntryVM"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/entryDateText"
                android:paddingTop="@dimen/linearVertPadding"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/entryDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{vm.date}"/>

            <TextView
                android:id="@+id/tensionSeekBarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/tensionSeekBar"
                android:paddingTop="@dimen/linearVertPadding"
                android:text="@string/tension"/>

            <tech.falx.tensionlog.ui.widget.IndicatorSeekbar
                android:id="@+id/tensionSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="@{vm.tension}"/>

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/locationEditText"
                android:paddingTop="@dimen/linearVertPadding"
                android:text="@string/location"/>

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/location"
                android:text="@{vm.location}"/>

            <TextView
                android:id="@+id/situationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/situationEditText"
                android:paddingTop="@dimen/linearVertPadding"
                android:text="@string/situation"/>

            <EditText
                android:id="@+id/situationEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/situation"
                android:text="@{vm.situation}"/>

            <TextView
                android:id="@+id/skillUsedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/skillUsedEditText"
                android:paddingTop="@dimen/linearVertPadding"
                android:text="@string/skill_used"/>

            <EditText
                android:id="@+id/skillUsedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/skill_used"
                android:text="@{vm.skillUsed}"/>

            <TextView
                android:id="@+id/skillDurationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/skillDurationSeekBar"
                android:paddingTop="@dimen/linearVertPadding"
                android:text="@string/skill_duration"/>

            <tech.falx.tensionlog.ui.widget.IndicatorSeekbar
                android:id="@+id/skillDurationSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="120"
                android:progress="@{vm.skillDuration}"/>

            <TextView
                android:id="@+id/tensionAfterSeekBarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/tensionAfterSeekBar"
                android:paddingTop="@dimen/linearVertPadding"
                android:text="@string/tension_after_label"/>

            <tech.falx.tensionlog.ui.widget.IndicatorSeekbar
                android:id="@+id/tensionAfterSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="@{vm.tensionAfterSkill}"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_labels_position="left"
            fab:menu_openDirection="up">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/delete_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.delete()}"
                android:src="@drawable/ic_delete"
                fab:fab_label="delete"
                fab:fab_size="mini"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/revert_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.init()}"
                android:src="@drawable/ic_undo"
                fab:fab_label="undo"
                fab:fab_size="mini"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/save_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.saveEntities()}"
                android:src="@drawable/ic_save"
                fab:fab_label="save"
                fab:fab_size="mini"/>

        </com.github.clans.fab.FloatingActionMenu>

    </android.support.design.widget.CoordinatorLayout>

</layout>